--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,23 @@
 name: unsplash_api
 description: An unsplash API library for Dart language
-version: 0.0.1-alpha
+version: 0.1.0-alpha
 repository: https://github.com/innerwilds/unsplash_dart_api.git
 
 environment:
   sdk: ^3.5.1
 
 dependencies:
-  built_collection: ^5.1.1
-  built_value: ^8.9.2
   collection: ^1.19.0
+  freezed_annotation: ^2.4.4
   http: ^1.2.2
+  json_annotation: ^4.9.0
   logger: ^2.4.0
   meta: ^1.15.0
 
 dev_dependencies:
   build_runner: ^2.4.12
+  freezed: ^2.5.7
+  json_serializable: ^6.8.0
   lints: ^4.0.0
   test: ^1.24.0
-  built_value_generator: ^8.9.2
   very_good_analysis: ^6.0.0
